demos/volumes/good/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: volumes
spec:
  selector:
    app: volumes
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
